add oauth and jwt
