# routes/auth.js
@@ -4,5 +4,6 @@ const authServices = require('../controller/auth')
 
 router.get('/google/login', authServices.getGooglAuthURL)
 router.get('/google', authServices.getTokens)
+router.get('/logout', authServices.logout)
 
 module.exports = router
